feat/update-info-web

--- a/resources/i18n/vn.json
+++ b/resources/i18n/vn.json
@@ -31,7 +31,7 @@
   "date_off_inc": "Ngày thành lập",
   "date_off_inc_content": "Được thành lập vào tháng 11 năm 2018.",
   "address": "Địa chỉ",
-  "address_content": "Lô 06, Đường TS25, Khu công nghiệp Tiên Sơn, Phường Đông Nguyên, Thị xã Từ Sơn, Tỉnh Bắc Ninh, Việt Nam.",
+  "address_content": "Số 1, Khu quân sự N10, Phố Ngọc Khánh, Phường Giảng Võ, Quận Ba Đình, Hà Nội.",
   "manpower": "Nhân sự",
   "manpower_content": "Số lượng nhân viên vượt quá 90.",
   "production_field": "Lĩnh vực sản xuất",
