--- a/resources/i18n/en.json
+++ b/resources/i18n/en.json
@@ -31,7 +31,7 @@
   "date_off_inc": "Date off Inc",
   "date_off_inc_content": "Incorporated in Nov 2018",
   "address": "Address",
-  "address_content": "Lot 06, Road TS25, Tien Son Industrial Park, Dong Nguyen Ward, Tu Son Town, Bac Ninh Province, Vietnam",
+  "address_content": "No. 1 N10 Military Compound, Ngoc Khanh Street, Giang Vo Ward, Ba Dinh District, Hanoi.",
   "manpower": "Manpower",
   "manpower_content": "The number of employees exceeding 90",
   "production_field": "Production field",
