feat/update-info-web-part2

--- a/resources/i18n/en.json
+++ b/resources/i18n/en.json
@@ -1,7 +1,7 @@
 {
   "about_us": "About US",
   "product_services": "Products & Services",
-  "optical_material_cutting": "Optical material die cutting",
+  "optical_material_cutting": "Precision die-cut products.",
   "outsourcing_services": "Outsourcing services",
   "contact_us": "Contact Us",
   "overview_introduction": "Founded in 2018, Vina Technology specializes in precision die-cutting solutions. With a 8000m² factory, over 90 employees, a skilled management team, and cutting-edge equipment, we excel in R&D, manufacturing, sales, and service.",
@@ -37,15 +37,15 @@
   "production_field": "Production field",
   "production_field_content": "Precision die cutting of heat conduction, insulation and shielding materials; Precision die cutting of graphite copper foil foam heat conduction components; Optical protective film, AB glue, OCA optical glue, precision die cutting; All kinds of double-sided adhesive tape, protective film, sound screen, buffer, dust-proof, waterproof, shading and other materials of precision die-cutting products.",
   "capacity": "Capacity",
-  "capacity_content": "200,000,000 sheets/year",
+  "capacity_content": "Over 200,000,000 sheets per year and still being upgraded.",
   "organization": "Organization",
   "seven_cores": "Seven Cores",
   "cost": "Cost",
   "cost_content1": "lSatisfactory supply and demand relationship and reliable and stable supplier resources",
   "cost_content2": "lPossess a complete process chain with optimization and continuous improvement of all links",
   "manufacturing_process": "Manufacturing Process",
-  "manufacturing_process1": "l200,000,000Sheet/Year。",
-  "manufacturing_process2": "lAdvanced production technology and equipment, scheduled production capacity 200,000,000Sheet/Year",
+  "manufacturing_process1": "Over 200,000,000 sheets per year and still being upgraded.",
+  "manufacturing_process2": "Advanced production technology and equipment, with production capacity continuously improved and upgraded.",
   "value_added_customer": "Value added customer",
   "value_added_customer1": "lComprehensive coordination of quality, delivery time, cost, service, flexibility, and design",
   "value_added_customer2": "lPay attention to customers' product upgrades, value enhancements, and service experience",
@@ -62,7 +62,7 @@
   "add_chairman": "No. 1 N10 Military Compound, Ngoc Khanh Street, Giang Vo Ward, Ba Dinh District., Hanoi",
   "chief": "Chief Executive Officer",
   "add_chief": "No. 1 N10 Military Compound, Ngoc Khanh Street, Giang Vo Ward, Ba Dinh District., Hanoi",
-  "optical_material_cutting1": "Our optical material die cutting services are designed to meet the precise requirements of modern electronic devices. We specialize in crafting high-performance components for applications such as temporary protection, sapphire lapping, optical clear adhesive (OCA) processing, light management, EMI shielding, and battery bonding.",
+  "optical_material_cutting1": "Our precision die-cut products are engineered to meet the exacting requirements of modern electronic devices. We specialize in manufacturing high-performance components for applications such as temporary protection, sapphire polishing, optical clear adhesive (OCA) processing, light management, EMI shielding, and battery connection.",
   "optical_material_cutting2": "Utilizing advanced materials like protection films, thin flowable OCA, conductive tapes, EMI absorbers, and copper foils, we enhance product functionality in areas like grounding, heat spreading, NFC optimization, and low surface energy bonding. These solutions are tailored to enable seamless integration into devices such as smartphones, tablets, and other consumer electronics, ensuring optimal durability and performance.",
   "products": "Products",
   "die_cutting_application": "Die cutting application",
