--- a/resources/i18n/vn.json
+++ b/resources/i18n/vn.json
@@ -1,7 +1,7 @@
 {
   "about_us": "Về chúng tôi",
   "product_services": "Sản phẩm & Dịch vụ",
-  "optical_material_cutting": "Cắt vật liệu quang học",
+  "optical_material_cutting": "Sản phẩm cắt khuôn chính xác",
   "outsourcing_services": "Dịch vụ gia công",
   "contact_us": "Liên hệ",
   "overview_introduction": "Được thành lập vào năm 2018, Vina Technology chuyên cung cấp các giải pháp cắt khuôn chính xác. Với nhà máy rộng 8.000m², hơn 90 nhân viên, đội ngũ quản lý giàu kinh nghiệm và trang thiết bị tiên tiến, chúng tôi vượt trội trong nghiên cứu & phát triển, sản xuất, kinh doanh và dịch vụ.",
@@ -37,15 +37,15 @@
   "production_field": "Lĩnh vực sản xuất",
   "production_field_content": "Cắt khuôn chính xác các vật liệu dẫn nhiệt, cách nhiệt và che chắn; Cắt khuôn chính xác các linh kiện dẫn nhiệt từ than chì, lá đồng và xốp; Màng bảo vệ quang học, keo AB, keo quang học OCA, cắt khuôn chính xác; Các loại băng keo hai mặt, màng bảo vệ, màn chống âm, đệm, chống bụi, chống nước, che chắn và các sản phẩm cắt khuôn chính xác khác.",
   "capacity": "Cống suất",
-  "capacity_content": "200.000.000 tờ/năm",
+  "capacity_content": "Hơn 200.000.000 tờ/năm và vẫn đang được nâng cấp.",
   "organization": "Sơ đồ tổ chức",
   "seven_cores": "7 cốt lõi",
   "cost": "Chi phí",
   "cost_content1": "Mối quan hệ cung cầu hài hòa và nguồn cung cấp ổn định, đáng tin cậy",
   "cost_content2": "Sở hữu một chuỗi quy trình hoàn chỉnh với việc tối ưu hóa và cải tiến liên tục tất cả các liên kết",
   "manufacturing_process": "Quy trình sản xuất",
-  "manufacturing_process1": "200.000.000 tờ/năm.",
-  "manufacturing_process2": "Công nghệ sản xuất tiên tiến và thiết bị, công suất sản xuất theo kế hoạch 200.000.000 tờ/năm.",
+  "manufacturing_process1": "Hơn 200.000.000 tờ/năm và vẫn đang được nâng cấp.",
+  "manufacturing_process2": "Công nghệ thiết bị sản xuất tiên tiến, công suất sản xuất được hoàn thiện và nâng cấp liên tục.",
   "value_added_customer": "Khách hàng giá trị gia tăng",
   "value_added_customer1": "Phối hợp toàn diện giữa chất lượng, thời gian giao hàng, chi phí, dịch vụ, tính linh hoạt và thiết kế",
   "value_added_customer2": "Chú trọng đến việc nâng cấp sản phẩm, cải thiện giá trị và trải nghiệm dịch vụ của khách hàng",
@@ -62,8 +62,8 @@
   "add_chairman": "Số 1, Khu Quân Đội N10, Phố Ngọc Khánh, Phường Giảng Võ Quận Ba Đình, Hà Nội.",
   "chief": "Giám đốc điều hành",
   "add_chief": "Số 1, Khu Quân Đội N10, Phố Ngọc Khánh, Phường Giảng Võ Quận Ba Đình, Hà Nội.",
-  "optical_material_cutting1": "Dịch vụ cắt khuôn vật liệu quang học của chúng tôi được thiết kế để đáp ứng yêu cầu chính xác của các thiết bị điện tử hiện đại. Chúng tôi chuyên sản xuất các linh kiện hiệu suất cao cho các ứng dụng như bảo vệ tạm thời, mài sapphire, xử lý keo quang học trong suốt (OCA), quản lý ánh sáng, che chắn EMI và kết nối pin.",
-  "optical_material_cutting2": "Sử dụng các vật liệu tiên tiến như màng bảo vệ, OCA lỏng mỏng, băng keo dẫn điện, bộ hấp thụ EMI và lá đồng, chúng tôi nâng cao chức năng sản phẩm trong các lĩnh vực như tiếp đất, phân tán nhiệt, tối ưu hóa NFC và kết nối với năng lượng bề mặt thấp. Các giải pháp này được tùy chỉnh để tích hợp liền mạch vào các thiết bị như điện thoại thông minh, máy tính bảng và các thiết bị điện tử tiêu dùng khác, đảm bảo độ bền và hiệu suất tối ưu.",
+  "optical_material_cutting1": "Sản phẩm cắt khuôn chính xác của chúng tôi được thiết kế để đáp ứng yêu cầu chính xác của các thiết bị điện tử hiện đại. Chúng tôi chuyên sản xuất các linh kiện hiệu suất cao cho các ứng dụng như bảo vệ tạm thời, mài sapphire, xử lý keo quang học trong suốt (OCA), quản lý ánh sáng, che chắn EMI và kết nối pin.",
+  "optical_material_cutting2": "Sử dụng các vật liệu tiên tiến như màng bảo vệ, OCA lỏng mỏng, băng keo dẫn điện, bộ hấp thụ EMI và lá đồng, chúng tôi nâng cao chức năng sản phẩm trong các lĩnh vực như tiếp địa, phân tán nhiệt, tối ưu hóa NFC và kết nối với năng lượng bề mặt thấp. Các giải pháp này được tùy chỉnh để tích hợp liền mạch vào các thiết bị như điện thoại thông minh, máy tính bảng và các thiết bị điện tử tiêu dùng khác, đảm bảo độ bền và hiệu suất tối ưu.",
   "products": "Sản phẩm",
   "die_cutting_application": "Ứng dụng cắt khuôn",
   "outsourcing_services1": "Công ty chúng tôi cung cấp các dịch vụ gia công toàn diện được thiết kế để đáp ứng nhu cầu chính xác của các ngành công nghiệp yêu cầu cắt khuôn và gia công vật liệu. Với trọng tâm vào chất lượng, hiệu quả và sự tùy chỉnh, chúng tôi cung cấp các giải pháp toàn diện bao gồm cung cấp vật liệu, cắt khuôn chính xác và lắp ráp sản phẩm.",
