--- a/resources/i18n/en.json
+++ b/resources/i18n/en.json
@@ -84,5 +84,12 @@
   "rotary_die2": "Building the complex products",
   "rotary_die3": "Good quality",
   "rotary_die4": "For joint products with the large size and multi layers",
-  "vina_technology": "VINA TECHNOLOGY"
+  "vina_technology": "VINA TECHNOLOGY",
+  "graphite_products": "Graphite heat sink products",
+  "protection_pet": "Protection pet products",
+  "pron_products": "Pron products, waterproof",
+  "cropper_products": "Copper aluminum products",
+  "silicone_products": "Silicone heat sink products, copper heat sink pipes",
+  "graphite_sink_products": "Graphite heat sink",
+  "computer_speaker": "Computer speaker membrane"
 }
