--- a/resources/i18n/vn.json
+++ b/resources/i18n/vn.json
@@ -84,5 +84,12 @@
   "rotary_die2": "Xây dựng các sản phẩm phức tạp",
   "rotary_die3": "Chất lượng tốt",
   "rotary_die4": "Dành cho các sản phẩm kết hợp có kích thước lớn và nhiều lớp",
-  "vina_technology": "VINA TECHNOLOGY"
+  "vina_technology": "VINA TECHNOLOGY",
+  "graphite_products": "Sản phẩm tản nhiệt graphite",
+  "protection_pet": "Sản phẩm pet bảo vệ",
+  "pron_products": "Sản phẩm pron, chống nước",
+  "cropper_products": "Sản phẩm đồng nhôm",
+  "silicone_products": "Sản phẩm silicon tản nhiệt, ống dẫn đồng tản nhiệt",
+  "graphite_sink_products": "Graphite tản nhiệt",
+  "computer_speaker": "Màng loa máy tính"
 }
